@@ -101,6 +101,9 @@ Core and builtins
 Library
 -------
 
+- cStringIO.truncate(-1) now raises an IOError, like StringIO and
+  regular files.
+
 - Patch #1472877: Fix Tix subwidget name resolution.
 
 - Patch #1594554: Always close a tkSimpleDialog on ok(), even
